do not generate sysdeps for .svn directories!
git-svn-id: file:///source/coreland/sysdeps/trunk@61 6e7d7e42-f3d6-da11-80d8-00d0b73f4485

--- a/CHANGES
+++ b/CHANGES
@@ -5,3 +5,4 @@
 20060426 code: ch_flags added with source
 20060426 code: ch_flags unit tests added
 20060429 note: moved to svn
+20060501 code: do not generate sysdeps for .svn directories!
