restructuring for cpj-genmk
git-svn-id: file:///source/coreland/sysdeps/trunk@94 6e7d7e42-f3d6-da11-80d8-00d0b73f4485

--- a/CHANGES
+++ b/CHANGES
@@ -8,3 +8,4 @@
 20060501 code: do not generate sysdeps for .svn directories!
 20060502 code: renamed makefile-local to Mkfile-local and restructured
                slightly due to cpj-genmk updates.
+20060502 code: further restructuring for cpj-genmk.
