--- a/CHANGES
+++ b/CHANGES
@@ -9,3 +9,6 @@
 20060502 code: renamed makefile-local to Mkfile-local and restructured
                slightly due to cpj-genmk updates.
 20060502 code: further restructuring for cpj-genmk.
+20060507 code: updated to cpj-genmk-0.6
+20060507 code: fixed x86cpuid so failure no longer means death.
+20060507 version: sysdeps-0.11
