--- a/TODO
+++ b/TODO
@@ -1,3 +1,11 @@
 Darwin testing.
 
 SDL_mixer, OpenGL.
+
+The sysdeps run output is quite ugly and not parseable at all. It might
+be a good idea to edit the Makefiles and make some cosmetic changes.
+
+  sysdeps sdl-flags
+  sysdeps sdl-libs
+  sysdeps opengl-flags
+  ...
