added dlopen, adjusted direntry
git-svn-id: file:///source/coreland/sysdeps/trunk@252 6e7d7e42-f3d6-da11-80d8-00d0b73f4485

--- a/CHANGES
+++ b/CHANGES
@@ -35,3 +35,6 @@
                reversed: sdl-flags becomes flags-sdl, png-libs becomes
                libs-png. This will prevent possible filename collisions.
 20060521 code: added SDL_ttf
+20060523 code: added dlopen
+20060523 code: changed direntry to use temporary files, for better
+               behaviour on hard error (no trampling on sysdeps.out)
