--- a/CHANGES
+++ b/CHANGES
@@ -39,3 +39,9 @@
 20060523 code: changed direntry to use temporary files, for better
                behaviour on hard error (no trampling on sysdeps.out)
 20060524 code: added signal
+20060603 code: sysdeps are now quiet by default.
+20060603 code: if a sysdep does not create a header file, it defines
+               a preprocessor #define in order to show whether it ran
+               successfully or not. png-flags, for example, defines
+               HAVE_LIBPNG. this should aid conditional and optional
+               compilation.
