ch_flags remove linux 'support'
git-svn-id: file:///source/coreland/sysdeps/trunk@555 6e7d7e42-f3d6-da11-80d8-00d0b73f4485

--- a/CHANGES
+++ b/CHANGES
@@ -49,3 +49,5 @@
 20060620 code: restructure to run scripts instead of makefile.
                terminal and non-terminal modules.
                depchklist for the curious.
+20060621 code: more general scheme. check sysdep-subs for new vars.
+20060621 code: dlopen fix on linux
