--- a/CHANGES
+++ b/CHANGES
@@ -51,3 +51,4 @@
                depchklist for the curious.
 20060621 code: more general scheme. check sysdep-subs for new vars.
 20060621 code: dlopen fix on linux
+20060621 code: remove ext2fs code from ch_flags.
