--- a/CHANGES
+++ b/CHANGES
@@ -53,3 +53,4 @@
 20060621 code: dlopen fix on linux
 20060621 code: remove ext2fs code from ch_flags.
 20060622 code: added jack
+20060702 code: added corelib
