--- a/CHANGES
+++ b/CHANGES
@@ -64,3 +64,4 @@
 20060719 code: FLTK added.
 20060720 code: moved FLTK to FLTK11 as there are two incompatible
                versions in use.
+20060723 code: added iomech.
