kqueue detection for broken darwin
git-svn-id: file:///source/coreland/sysdeps/trunk@829 6e7d7e42-f3d6-da11-80d8-00d0b73f4485

--- a/CHANGES
+++ b/CHANGES
@@ -65,3 +65,4 @@
 20060720 code: moved FLTK to FLTK11 as there are two incompatible
                versions in use.
 20060723 code: added iomech.
+20060812 code: broken darwin kqueue detection
