coreproject and io_poll
git-svn-id: file:///source/coreland/sysdeps/trunk@1061 6e7d7e42-f3d6-da11-80d8-00d0b73f4485

--- a/CHANGES
+++ b/CHANGES
@@ -66,3 +66,4 @@
                versions in use.
 20060723 code: added iomech.
 20060812 code: broken darwin kqueue detection
+20060912 code: added io_poll and new coreproject tools.
