--- a/CHANGES
+++ b/CHANGES
@@ -67,3 +67,4 @@
 20060723 code: added iomech.
 20060812 code: broken darwin kqueue detection
 20060912 code: added io_poll and new coreproject tools.
+20061013 code: moved endian to byteorder (linux conflict)
