--- a/CHANGES
+++ b/CHANGES
@@ -69,3 +69,4 @@
 20060912 code: added io_poll and new coreproject tools.
 20061013 code: moved endian to byteorder (linux conflict)
 20061019 code: integers split, new coreproject tools
+20061119 code: added fastcgi
