--- a/CHANGES
+++ b/CHANGES
@@ -70,3 +70,4 @@
 20061013 code: moved endian to byteorder (linux conflict)
 20061019 code: integers split, new coreproject tools
 20061119 code: added fastcgi
+20061218 code: added libtiff
