--- a/CHANGES
+++ b/CHANGES
@@ -71,3 +71,6 @@
 20061019 code: integers split, new coreproject tools
 20061119 code: added fastcgi
 20061218 code: added libtiff
+20070221 code: added mmap
+20070221 code: implemented opengl
+20070221 code: new coreproject tools
