--- a/CHANGES
+++ b/CHANGES
@@ -78,3 +78,4 @@
 20070326 code: massively updated sd-math
 20070326 code: improved sd-osversion for sunos.
 20070326 code: vector-libs update.
+20070407 code: added sd-posix_rt.
