--- a/CHANGES
+++ b/CHANGES
@@ -79,3 +79,4 @@
 20070326 code: improved sd-osversion for sunos.
 20070326 code: vector-libs update.
 20070407 code: added sd-posix_rt.
+20070409 code: added sd-ptr_uint.
