--- a/CHANGES
+++ b/CHANGES
@@ -84,3 +84,4 @@
                of all files created by the current modules.
 20070430 code: added sd-fork.
 20070430 code: adjusted regen target.
+20070519 code: added netlib.
