--- a/CHANGES
+++ b/CHANGES
@@ -87,3 +87,4 @@
 20070519 code: added netlib.
 20070829 code: added libaiff.
 20070904 code: quote SYS_CCVERSION in sysinfo.
+20071214 code: fix stdint.h for pedantic compilers in int/uint*
