--- a/CHANGES
+++ b/CHANGES
@@ -92,3 +92,4 @@
 20080717 code: added sdl-img-ada
 20080717 code: added sdl-ttf-ada
 20080731 code: added sndfile-ada
+20080802 code: added getopt-ada
