--- a/CHANGES
+++ b/CHANGES
@@ -96,3 +96,4 @@
 20080803 code: added samplerate
 20080803 code: added samplerate-ada
 20080805 code: added pgada
+20080821 code: added agar-core-ada
