added agar-flags, agar-libs

--- a/CHANGES
+++ b/CHANGES
@@ -97,3 +97,5 @@
 20080803 code: added samplerate-ada
 20080805 code: added pgada
 20080821 code: added agar-core-ada
+20080821 code: added agar-flags
+20080821 code: added agar-libs
