--- a/CHANGES
+++ b/CHANGES
@@ -99,3 +99,5 @@
 20080821 code: added agar-core-ada
 20080821 code: added agar-flags
 20080821 code: added agar-libs
+20080827 code: added agar-gui-ada-flags
+20080827 code: added agar-gui-ada-libs
