agar-gui-libs, agar-gui-flags

--- a/CHANGES
+++ b/CHANGES
@@ -101,3 +101,5 @@
 20080821 code: added agar-libs
 20080827 code: added agar-gui-ada-flags
 20080827 code: added agar-gui-ada-libs
+20080827 code: added agar-gui-flags
+20080827 code: added agar-gui-libs
