--- a/CHANGES
+++ b/CHANGES
@@ -103,3 +103,4 @@
 20080827 code: added agar-gui-ada-libs
 20080827 code: added agar-gui-flags
 20080827 code: added agar-gui-libs
+20081001 code: Ada support.
