added plexlog-flags, plexlog-libs

--- a/CHANGES
+++ b/CHANGES
@@ -104,3 +104,5 @@
 20080827 code: added agar-gui-flags
 20080827 code: added agar-gui-libs
 20081001 code: Ada support.
+20081008 code: added plexlog-flags
+20081008 code: added plexlog-libs
