--- a/CHANGES
+++ b/CHANGES
@@ -107,3 +107,4 @@
 20081008 code: added plexlog-flags
 20081008 code: added plexlog-libs
 20081008 code: be loud about using conf-prefix.
+20081008 code: added sd-sendfile
