--- a/CHANGES
+++ b/CHANGES
@@ -111,3 +111,5 @@
 20081008 code: added silc-toolkit
 20081008 code: added sdl-gfx-flags
 20081008 code: added sdl-gfx-libs-S
+20081104 code: added stack-ada-flags
+20081104 code: added stack-ada-libs
