20090427 code: added sdl-ada-annex-flags 20090427 code: added sdl-ada-annex-libs-S 20090427 code: added opengl-ada-flags 20090427 code: added opengl-ada-libs-S

--- a/CHANGES
+++ b/CHANGES
@@ -140,3 +140,7 @@
 20090219 code: added chrono-ada-libs-S
 20090220 code: added plexlog-ada-flags
 20090220 code: added plexlog-ada-libs-S
+20090427 code: added sdl-ada-annex-flags
+20090427 code: added sdl-ada-annex-libs-S
+20090427 code: added opengl-ada-flags
+20090427 code: added opengl-ada-libs-S
