20090624 code: added sd-streams

--- a/CHANGES
+++ b/CHANGES
@@ -144,3 +144,4 @@
 20090427 code: added sdl-ada-annex-libs-S
 20090427 code: added opengl-ada-flags
 20090427 code: added opengl-ada-libs-S
+20090624 code: added sd-streams
