--- a/TODO
+++ b/TODO
@@ -4,3 +4,11 @@ http://predef.sourceforge.net/index.php
 
 Check architecture before compiling sd-cpuidx86 so that "unexpected failure"
 can be detected.
+
+Fix sd-cpuidx86 on x86_64:
+
+  sd-cpuidx86.c: Assembler messages:
+  sd-cpuidx86.c:235: Error: suffix or operands invalid for `pop'
+  sd-cpuidx86.c:238: Error: suffix or operands invalid for `push'
+  sd-cpuidx86.c:241: Error: suffix or operands invalid for `pop'
+
