--- a/TODO
+++ b/TODO
@@ -1,2 +1,5 @@
 http://predef.sourceforge.net/index.php
 
+----------------------------------------------------------------------
+
+Proper cleanup of all executables on Win32.
