--- a/TODO
+++ b/TODO
@@ -3,3 +3,11 @@ http://predef.sourceforge.net/index.php
 ----------------------------------------------------------------------
 
 Proper cleanup of all executables on Win32.
+
+----------------------------------------------------------------------
+
+Standardize module naming.
+
+----------------------------------------------------------------------
+
+Standardize module termination properties - never fail?
