--- a/TODO
+++ b/TODO
@@ -18,3 +18,10 @@ Improve module metadata.
   URL of package the module detects (if appropriate)
   List of platforms module is known to work on?
     Combinatorial explosion.
+
+------------------------------------------------------------------------
+
+Consider making SPARC into SPARC and SPARC64:
+
+  SPARC __sparc __sparcv8
+  SPARC64 __sparcv9
