--- a/TODO
+++ b/TODO
@@ -1,15 +1,20 @@
 http://predef.sourceforge.net/index.php
 
-----------------------------------------------------------------------
+------------------------------------------------------------------------
+
+Define ALL uses of POSIX shell utilities as macros in order to easily
+detect the subset of POSIX used.
+
+------------------------------------------------------------------------
 
 Standardize module naming.
 
-----------------------------------------------------------------------
+------------------------------------------------------------------------
 
 Standardize module prelude, compiler use, etc.
   Provide template for custom modules?
 
-----------------------------------------------------------------------
+------------------------------------------------------------------------
 
 Improve module metadata.
 
