Updated to installer 2.3.0

--- a/CHANGES
+++ b/CHANGES
@@ -151,3 +151,4 @@
 20090829 code: added serial_io-libs-S
 20091028 code: Finish large rewrite of all subsystems. sysdeps has essentially
                jumped three major version numbers.
+20091030 code: updated to installer 2.3.0
