--- a/CHANGES
+++ b/CHANGES
@@ -152,3 +152,4 @@
 20091028 code: Finish large rewrite of all subsystems. sysdeps has essentially
                jumped three major version numbers.
 20091030 code: updated to installer 2.3.0
+20091030 code: updated opengl-obj to 2.0.
