--- a/CHANGES
+++ b/CHANGES
@@ -153,3 +153,4 @@
                jumped three major version numbers.
 20091030 code: updated to installer 2.3.0
 20091030 code: updated opengl-obj to 2.0.
+20091116 code: added ocaml-flags.
